--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
